unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Description__c</fullName>
    <label>Additional Description</label>
    <type>TextArea</type>
</CustomField>