unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Used to display data in the volunteer portal. Age_Requirement__c</description>
    <formula>Age_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>