unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Age_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Age_Requirement__c</fullName>
    <formula>IF(
    OR(GW_Volunteers__Volunteer_Job__r.Minimum_Age__c = 0, ISBLANK(GW_Volunteers__Volunteer_Job__r.Minimum_Age__c)),
    &quot;All Ages&quot;,
    TEXT(GW_Volunteers__Volunteer_Job__r.Minimum_Age__c) &amp; &quot;+&quot;
)</formula>
    <label>Age Requirement</label>
    <type>Text</type>
</CustomField>