unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/CR1112_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>CR1112_Action_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MLF Customization. March 2024. Created to help business users mitigate problem CR-1112. Temporary use. Can be removed when the Fortafy created Volunteer Portal (server.mlf.org) is decommissioned. Identifies Shifts the Vol Team biz users have taken action on.</description>
    <label>CR1112 Action Taken?</label>
    <type>Checkbox</type>
</CustomField>