unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>Used to display data in the volunteer portal. GW_Volunteers__Start_Date_Time__c</description>
    <formula>GW_Volunteers__Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>