unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>Used to display data in the volunteer portal. Shift_Day_of_the_Week__c</description>
    <formula>Shift_Day_of_the_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>