unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <label>Donation Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>