unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Family_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Family_Friendly__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Family_Friendly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Friendly</label>
    <type>Checkbox</type>
</CustomField>