unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/formula_Group_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>formula_Group_Contact_Phone__c</fullName>
    <formula>fortafy_Group_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Syncd with Wordpress.</inlineHelpText>
    <label>Group Contact Phone</label>
    <type>Text</type>
</CustomField>