unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>fortafy_CampaignId__c</fullName>
    <formula>CASESAFEID( GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampaignId</label>
    <type>Text</type>
</CustomField>