unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>fortafy_CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>