unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_DisableSync__c.field-meta.xml
<CustomField>
    <fullName>fortafy_DisableSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Sync</label>
    <type>Checkbox</type>
</CustomField>