unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_End_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>fortafy_End_Date_Day__c</fullName>
    <label>End Date Day</label>
    <type>Date</type>
</CustomField>