unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>fortafy_End_Date_Time__c</fullName>
    <formula>GW_Volunteers__Start_Date_Time__c + (GW_Volunteers__Duration__c/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>