unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Group_Contact__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Group_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select/create the organizational contact for this event.</inlineHelpText>
    <label>Group Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>Volunteer_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>