unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Group_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Group_Contact_Name__c</fullName>
    <description>Sync&#39;d to Wordpress.</description>
    <formula>fortafy_Group_Contact__r.FirstName &amp; &quot; &quot; &amp; fortafy_Group_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Contact Name</label>
    <type>Text</type>
</CustomField>