unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Group_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Group_Contact_Role__c</fullName>
    <formula>fortafy_Group_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sync&#39;d with Wordpress.</inlineHelpText>
    <label>Group Contact Role</label>
    <type>Text</type>
</CustomField>