unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Job_Link__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Job_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://serve.mlf.org/events/?SFID=&quot;&amp;CASESAFEID(Id), &quot;Exernal URL&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Link</label>
    <type>Text</type>
</CustomField>