unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_RegistrationClosedDatetime__c.field-meta.xml
<CustomField>
    <fullName>fortafy_RegistrationClosedDatetime__c</fullName>
    <label>Registration Closed Datetime</label>
    <type>DateTime</type>
</CustomField>