unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_ShiftStatus__c.field-meta.xml
<CustomField>
    <fullName>fortafy_ShiftStatus__c</fullName>
    <label>Shift Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EventScheduled</fullName>
                <default>true</default>
                <label>EventScheduled</label>
            </value>
            <value>
                <fullName>EventCancelled</fullName>
            </value>
            <value>
                <fullName>EventPostponed</fullName>
            </value>
            <value>
                <fullName>EventMovedOnline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>