unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Start_Date_AM_PM__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Start_Date_AM_PM__c</fullName>
    <label>Start Date AM/PM</label>
    <length>2</length>
    <type>Text</type>
</CustomField>