unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Start_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Start_Date_Day__c</fullName>
    <label>Start Date Day</label>
    <type>Date</type>
</CustomField>