unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_Start_Date_Hour__c.field-meta.xml
<CustomField>
    <fullName>fortafy_Start_Date_Hour__c</fullName>
    <label>Start Date Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>