unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_volunteer_shift_id_18__c.field-meta.xml
<CustomField>
    <fullName>fortafy_volunteer_shift_id_18__c</fullName>
    <description>18 Digit Salesforce Volunteer Shift Case Safe ID</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18 Digit Salesforce Volunteer Shift Case Safe ID</inlineHelpText>
    <label>Volunteer Shift ID (18)</label>
    <type>Text</type>
</CustomField>