unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_WordpressId__c.field-meta.xml
<CustomField>
    <fullName>fortafy_WordpressId__c</fullName>
    <externalId>true</externalId>
    <label>Wordpress Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>