unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/fortafy_WordpressPostStatus__c.field-meta.xml
<CustomField>
    <fullName>fortafy_WordpressPostStatus__c</fullName>
    <defaultValue>&quot;publish&quot;</defaultValue>
    <label>Wordpress Post Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>