unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Group_Contact_Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Group_Contact_Email_Bounced__c</fullName>
    <description>If Group Contact Email Bounce Date is set</description>
    <formula>NOT(ISNULL(fortafy_Group_Contact__r.EmailBouncedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Group Contact Email Bounce Date is set</inlineHelpText>
    <label>Group Contact Email Bounced</label>
    <type>Checkbox</type>
</CustomField>