unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Group_Donation_Ask_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Donation_Ask_Sent_Date__c</fullName>
    <inlineHelpText>Date when invitation to donate was sent</inlineHelpText>
    <label>Group Donation Ask Sent Date</label>
    <type>DateTime</type>
</CustomField>