unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Group_Serve_Donation__c.field-meta.xml
<CustomField>
    <fullName>Group_Serve_Donation__c</fullName>
    <label>Group Serve Donation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>