unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Job_Location_City__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Job_Location_City__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location_City__c</formula>
    <label>Job Location City</label>
    <type>Text</type>
</CustomField>