unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Job_Location_State_Province__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Job_Location_State_Province__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location State/Province</label>
    <type>Text</type>
</CustomField>