unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Job_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Job_Location_Street__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location Street</label>
    <type>Text</type>
</CustomField>