unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Job_Recurrence_Schedule__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Job_Recurrence_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically set by the system scheduler to show the Job Recurrence Schedule this shift is associated with.</inlineHelpText>
    <label>Job Recurrence Schedule</label>
    <referenceTo>GW_Volunteers__Job_Recurrence_Schedule__c</referenceTo>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>Volunteer_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>