unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Number_of_Volunteers_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</fullName>
    <formula>max ( 0, GW_Volunteers__Desired_Number_of_Volunteers__c -  BLANKVALUE(GW_Volunteers__Total_Volunteers__c, 0))</formula>
    <label># of Volunteers Still Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>