unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/GW_Volunteers__Total_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Total_Volunteers__c</fullName>
    <description>This field is maintained by the VOL_VolunteerHours_ShiftRollups trigger.</description>
    <inlineHelpText>SYSTEM FIELD.  DO NOT EDIT.  The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
    <label>Total Volunteers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>