unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Handicap_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Handicap_Accessible__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Handicap_Accessible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handicap Accessible</label>
    <type>Checkbox</type>
</CustomField>