unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Used to display data in the volunteer portal. GW_Volunteers__Duration__c</description>
    <formula>GW_Volunteers__Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>