unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Indoors__c.field-meta.xml
<CustomField>
    <fullName>Indoors__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Indoors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indoors</label>
    <type>Checkbox</type>
</CustomField>