unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>MLF customization Winter 2025. Change required for new Exp Cloud based Volunteer Portal. This new field, with a shortened Label, is used for display within the Vol Portal to eliminate Label truncation within the Vol Portal mobile experience. Also refer to the &quot;Job URL&quot; field on the Volunteer Job Object.</description>
    <formula>HYPERLINK(GW_Volunteers__Volunteer_Job__r.Job_URL__c, GW_Volunteers__Volunteer_Job__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job</label>
    <type>Text</type>
</CustomField>