unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/of_Excess_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>of_Excess_Volunteers__c</fullName>
    <description>Fortafy created field in March 2024 to help track and mitigate Volunteer Portal problems. This field is not required and not used within MLF&#39;s established business processes.</description>
    <formula>IF(GW_Volunteers__Total_Volunteers__c - GW_Volunteers__Desired_Number_of_Volunteers__c &gt; 0, GW_Volunteers__Total_Volunteers__c - GW_Volunteers__Desired_Number_of_Volunteers__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Total Number of Volunteers &gt; Desired No. of Volunteers then show value, else show 0.</inlineHelpText>
    <label># of Excess Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>