unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <description>Used to display data in the volunteer portal. GW_Volunteers__Number_of_Volunteers_Still_Needed__c</description>
    <formula>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>