unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Prerequisite_training_required__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_training_required__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Prerequisite_training_required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prerequisite training required</label>
    <type>Checkbox</type>
</CustomField>