unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Private_Event_Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Private_Event_Job_Level__c</fullName>
    <description>MLF Customization Fall 2024. Field introduced so we can surface this field on the Volunteer Shift Object to enable filtering on this field within Volunteer Shift List Views</description>
    <formula>GW_Volunteers__Volunteer_Job__r.Private_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, indicates the Job associated to this Shift has been marked as a Private Event Job so the Job and its associated Shifts will not be displayed on the Volunteer Portal. Reference Only. Not Editable.</inlineHelpText>
    <label>Private Event (Job Level)</label>
    <type>Checkbox</type>
</CustomField>