unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Private_Shift__c.field-meta.xml
<CustomField>
    <fullName>Private_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MLF customization May 2024. Used to flag a Shift as being private.</description>
    <inlineHelpText>Select if the Shift is private and you do not want the Shift posted on the public facing Volunteer Calendar</inlineHelpText>
    <label>Private Shift</label>
    <type>Checkbox</type>
</CustomField>