unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <description>Sourced from same-named field on Volunteer Job record. Flow does the field update because long-text fields are inaccessible in field formulas</description>
    <inlineHelpText>Source is Volunteer Job record</inlineHelpText>
    <label>Reminder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>