unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Date__c</fullName>
    <inlineHelpText>When was reminder email automatically sent</inlineHelpText>
    <label>Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>