unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Shift_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Shift_Day_of_the_Week__c</fullName>
    <formula>CASE(MOD( DATEVALUE ( GW_Volunteers__Start_Date_Time__c) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Day of the Week</label>
    <type>Text</type>
</CustomField>