unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Shift_in_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Shift_in_14_Days__c</fullName>
    <description>Evaluates the true when the shift is in 14 days from today.</description>
    <formula>(fortafy_Start_Date_Day__c + 14) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates the true when the shift is in 14 days from today.</inlineHelpText>
    <label>Shift in 14 Days</label>
    <type>Checkbox</type>
</CustomField>