unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Sign_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Link__c</fullName>
    <description>Created then not used as part of new Volunteer Portal project</description>
    <formula>&quot;Sign Up Here&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Up Link (not used)</label>
    <type>Text</type>
</CustomField>