unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/fields/Spotlight_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Spotlight_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spotlight Opportunity</label>
    <type>Checkbox</type>
</CustomField>