unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Volunteer_Job__c</columns>
    <columns>GW_Volunteers__Start_Date_Time__c</columns>
    <columns>GW_Volunteers__Duration__c</columns>
    <columns>GW_Volunteers__Desired_Number_of_Volunteers__c</columns>
    <columns>GW_Volunteers__Total_Volunteers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Start_Date_Time__c</field>
        <operation>greaterThan</operation>
        <value>10/4/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>fortafy_Job_Name__c</field>
        <operation>contains</operation>
        <value>studio</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>