unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/listViews/Cancelled_Shifts.listView-meta.xml
<ListView>
    <fullName>Cancelled_Shifts</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Volunteer_Job__c</columns>
    <columns>GW_Volunteers__Start_Date_Time__c</columns>
    <columns>GW_Volunteers__Duration__c</columns>
    <columns>GW_Volunteers__Desired_Number_of_Volunteers__c</columns>
    <columns>GW_Volunteers__Total_Volunteers__c</columns>
    <columns>fortafy_ShiftStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Start_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>fortafy_ShiftStatus__c</field>
        <operation>equals</operation>
        <value>EventCancelled</value>
    </filters>
    <label>Cancelled Shifts</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>