unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/listViews/Community_Market_Clerk_Next_90.listView-meta.xml
<ListView>
    <fullName>Community_Market_Clerk_Next_90</fullName>
    <columns>NAME</columns>
    <columns>GW_Volunteers__Volunteer_Job__c</columns>
    <columns>GW_Volunteers__Start_Date_Time__c</columns>
    <columns>GW_Volunteers__Duration__c</columns>
    <columns>GW_Volunteers__Desired_Number_of_Volunteers__c</columns>
    <columns>GW_Volunteers__Total_Volunteers__c</columns>
    <columns>fortafy_ShiftStatus__c</columns>
    <columns>fortafy_DisableSync__c</columns>
    <columns>fortafy_WordpressId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Start_Date_Time__c</field>
        <operation>equals</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <filters>
        <field>GW_Volunteers__Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>Community Market Clerk</value>
    </filters>
    <label>Community Market Clerk - Next 90</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>