unpackaged/main/default/objects/GW_Volunteers__Volunteer_Shift__c/listViews/Empty_Garden_Shifts.listView-meta.xml
<ListView>
    <fullName>Empty_Garden_Shifts</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 or 6)</booleanFilter>
    <columns>GW_Volunteers__Volunteer_Job__c</columns>
    <columns>Shift_Day_of_the_Week__c</columns>
    <columns>GW_Volunteers__Start_Date_Time__c</columns>
    <columns>GW_Volunteers__Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GW_Volunteers__Start_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>fortafy_CampaignId__c</field>
        <operation>equals</operation>
        <value>701i0000000eo3kAAA</value>
    </filters>
    <filters>
        <field>GW_Volunteers__Number_of_Volunteers_Still_Needed__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Private_Shift__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>fortafy_WordpressPostStatus__c</field>
        <operation>notEqual</operation>
        <value>draft</value>
    </filters>
    <filters>
        <field>fortafy_DisableSync__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Upcoming Garden Shifts</label>
    <sharedTo>
        <allPartnerUsers />
        <group>Sys_Admin_Team</group>
    </sharedTo>
</ListView>